--- a/flows.html
+++ b/flows.html
@@ -14,52 +14,31 @@
 <body>
 <h1 id="title">State Flow</h1>
 <div>Source: <span id="src"></span></div>
-<div id="chart"><div id="m" class="mermaid">Loading…</div></div>
-<h3>Mermaid source</h3>
-<pre id="mer"></pre>
-
+<div id="chart"><div id="m" class="mermaid">flowchart TB
+    open_connect[Open InsCipher Connect]
+    start_filing[Start New Filing - select TX]
+    portal_login[Log in to TX Portal]
+    address_check{Address mismatch?}
+    fix_address[Fix address in Connect - update and save]
+    upload_docs[Upload Required Docs - package, attachments]
+    submit_filing[Submit Filing]
+    receipt_check{Receipt downloaded?}
+    retry_download[Retry download - or open in new tab]
+    archive_receipt[Archive receipt in Connect - link to record]
+    open_connect --> start_filing
+    start_filing --> portal_login
+    portal_login --> address_check
+    address_check -- Yes --> fix_address
+    address_check -- No --> upload_docs
+    fix_address --> portal_login
+    upload_docs --> submit_filing
+    submit_filing --> receipt_check
+    receipt_check -- Yes --> archive_receipt
+    receipt_check -- No --> retry_download
+    retry_download --> receipt_check
+</div>
 <script>
-(async function(){
-  const qs = new URL(location.href).searchParams;
-  const yamlUrl = qs.get("yaml") || "./states/TX.yaml";   // ✅ default to TX.yaml
-  document.getElementById("src").textContent = yamlUrl;
-
-  const res = await fetch(yamlUrl, { cache: "no-store" });
-  if(!res.ok) { document.getElementById("chart").textContent = "Fetch failed " + res.status; return; }
-  const raw = await res.text();
-  const data = jsyaml.load(raw);
-
-  const esc = t => String(t||"")
-    .replace(/\r?\n/g," ")
-    .replace(/\[/g,"(").replace(/\]/g,")")
-    .replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;");
-
-  const L = ["flowchart TB"];
-  (data.steps||[]).forEach(s=>{
-    const node = s.type==="decision"
-      ? `${s.id}{${esc(s.label||s.id)}}`
-      : `${s.id}[${esc(s.label||s.id)}]`;
-    L.push(node);
-  });
-  (data.steps||[]).forEach(s=>{
-    if(s.type==="decision"){
-      if(s.yes_to) L.push(`${s.id} -- Yes --> ${s.yes_to}`);
-      if(s.no_to)  L.push(`${s.id} -- No --> ${s.no_to}`);
-    } else if(s.next){
-      L.push(`${s.id} --> ${s.next}`);
-    }
-  });
-
-  const mer = L.join("\n");
-  document.getElementById("mer").textContent = mer;
-
-  const el = document.getElementById("m");
-  el.textContent = mer;
-  el.removeAttribute("data-processed");
-  mermaid.initialize({ startOnLoad:false });
-  mermaid.init(undefined, el);
-
-})();
+  mermaid.initialize({ startOnLoad:true, theme:'default' });
 </script>
 </body>
 </html>
