--- a/flows.html
+++ b/flows.html
@@ -9,14 +9,17 @@
     body { font-family: Tahoma, Arial, sans-serif; margin: 16px; background: #fafafa }
     #chart .mermaid { white-space: pre }
     pre { background: #f6f6f6; padding: 10px; border-radius: 8px; overflow:auto }
+    .wrap { max-width:1100px; margin:0 auto }
   </style>
 </head>
 <body>
-<h1 id="title">State Flow</h1>
-<div>Source: <span id="src"></span></div>
-<div id="chart"><div id="m" class="mermaid">Loading…</div></div>
-<h3>Mermaid source</h3>
-<pre id="mer"></pre>
+<div class="wrap">
+  <h1 id="title">State Flow</h1>
+  <div>Source: <span id="src"></span></div>
+  <div id="chart"><div id="m" class="mermaid">Loading…</div></div>
+  <h3>Mermaid source</h3>
+  <pre id="mer"></pre>
+</div>
 
 <script>
 (async function(){
@@ -30,7 +33,6 @@
   const raw  = await res.text();
   const data = jsyaml.load(raw);
 
-  // Label sanitizer -> EXACT “dash style” that rendered
   const esc = t => String(t||"")
     .replace(/\s*\(([^)]+)\)/g, " - $1")  // (foo) ->  - foo
     .replace(/\r?\n/g, " ")               // single line
@@ -38,30 +40,86 @@
     .replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;")
     .trim();
 
-  // Build Mermaid from YAML
-  const L = ["flowchart TB"];
-  (data.steps||[]).forEach(s=>{
-    const label = esc(s.label || s.id);
-    const node  = s.type==="decision" ? `${s.id}{${label}}` : `${s.id}[${label}]`;
-    L.push("    " + node);
-  });
-  (data.steps||[]).forEach(s=>{
-    if(s.type==="decision"){
-      if(s.yes_to) L.push(`    ${s.id} -- Yes --> ${s.yes_to}`);
-      if(s.no_to)  L.push(`    ${s.id} -- No --> ${s.no_to}`);
-    } else if(s.next){
-      L.push(`    ${s.id} --> ${s.next}`);
+  // Build Mermaid with optional lanes (subgraphs).
+  // If YAML has lanes: [{key: 'connect', title: 'InsCipher Connect'}, ...] we use those.
+  // Otherwise, we infer lanes by id prefixes/known ids.
+  const steps = (data.steps || []).map(s => ({
+    id: s.id,
+    type: s.type || 'action',
+    label: esc(s.label || s.id),
+    next: s.next,
+    yes_to: s.yes_to,
+    no_to: s.no_to,
+    lane: s.lane || s.lane_key || inferLane(s.id)
+  }));
+
+  function inferLane(id){
+    // Heuristic fallback so older YAMLs still render in lanes
+    if (/^(open_connect|start_filing|fix_address|archive_receipt)/.test(id)) return 'connect';
+    return 'state_portal';
+  }
+
+  const laneMap = {};
+  // If lanes are provided in YAML, use them; else define our defaults
+  if (Array.isArray(data.lanes) && data.lanes.length){
+    data.lanes.forEach(l => laneMap[l.key] = l.title || l.name || l.key);
+  } else {
+    laneMap.connect = 'InsCipher Connect';
+    laneMap.state_portal = 'State Portal';
+  }
+
+  // Group by lane in insertion order of laneMap keys, then any others
+  const lanesInOrder = Object.keys(laneMap);
+  const extraLanes = [...new Set(steps.map(s=>s.lane))].filter(k => !lanesInOrder.includes(k));
+  const allLanes = [...lanesInOrder, ...extraLanes];
+
+  const L = [];
+  L.push('flowchart TB');
+
+  // Lanes + nodes
+  for (const lane of allLanes){
+    const title = laneMap[lane] || lane;
+    const laneSteps = steps.filter(s => s.lane === lane);
+    if (!laneSteps.length) continue;
+
+    const laneId = lane.toUpperCase();
+    L.push(`  subgraph ${laneId}[${title}]`);
+    laneSteps.forEach(s => {
+      const node = s.type === 'decision' ? `${s.id}{${s.label}}` : `${s.id}[${s.label}]`;
+      L.push(`    ${node}`);
+    });
+    L.push('  end');
+    L.push('');
+  }
+
+  // Edges
+  steps.forEach(s=>{
+    if (s.type === 'decision') {
+      if (s.yes_to) L.push(`  ${s.id} -- Yes --> ${s.yes_to}`);
+      if (s.no_to)  L.push(`  ${s.id} -- No --> ${s.no_to}`);
+    } else if (s.next) {
+      L.push(`  ${s.id} --> ${s.next}`);
     }
   });
 
+  // Simple styles (kept minimal to avoid parser quirks)
+  L.push(
+    'style CONNECT fill:#f8f9fa,stroke:#4f46e5,stroke-width:1.2px',
+    'style STATE_PORTAL fill:#f8f9fa,stroke:#468c98,stroke-width:1.2px',
+    'classDef action fill:#ffffff,stroke:#4f46e5,stroke-width:1.2px,color:#111827',
+    'classDef decision fill:#fff7ed,stroke:#f04f23,stroke-width:2px,color:#111827'
+  );
+  steps.forEach(s => L.push(`class ${s.id} ${s.type === 'decision' ? 'decision' : 'action'}`));
+
   const mer = L.join("\n");
   document.getElementById("mer").textContent = mer;
+  document.getElementById("title").textContent = `${data.state || 'State'} Filing Flow`;
 
-  // Render (DOM-fed)
+  // Render (DOM-fed, straight lines)
   const el = document.getElementById("m");
   el.textContent = mer;
   el.removeAttribute("data-processed");
-  mermaid.initialize({ startOnLoad:false, theme:'default' });
+  mermaid.initialize({ startOnLoad:false, theme:'default', flowchart:{ curve:'linear', htmlLabels:false } });
   mermaid.init(undefined, el);
 })();
 </script>
